--- a/html/cart.html
+++ b/html/cart.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../public/css/navbar.css" />
     <link rel="stylesheet" href="../public/css/footer.css" />
     <link rel="stylesheet" href="../public/css/cart.css" />
-    <style>
+    <!-- <style>
       body {
         font-family: "Poppins", sans-serif;
         background-color: #f8f9fa;
@@ -159,7 +159,7 @@
         border-radius: 8px;
         margin-right: 10px;
       }
-    </style>
+    </style> -->
   </head>
   <body>
      <header>
@@ -167,7 +167,7 @@
       <nav class="navbar navbar-expand-lg d-flex">
         <div class="container">
           <div class="d-flex justify-content-between align-items-center">
-            <a class="navbar-brand" href="../index.html">e-shop</a>
+            <a class="navbar-brand" href="../index.html">La-imparial</a>
 
             <div class="mobile-actions d-flex">
               <a href="cart.html" class="cart-icon">
@@ -206,6 +206,15 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#articles">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="compare.html">Compare</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
@@ -274,7 +283,7 @@
               <th>Product</th>
               <th class="quantity">Price</th>
               <th class="quantity">Qty</th>
-              <th  class="total">Total</th>
+              <th class="total">Total</th>
               <th class="quantity">Action</th>
             </tr>
           </thead>
@@ -283,12 +292,10 @@
           </tbody>
         </table>
       </div>
-
       <div class="order-summary">
         <span>Subtotal</span>
         <span id="cart-subtotal">$0</span>
       </div>
-
       <div class="buttons">
         <button onclick="continueShopping()">Continue Shopping</button>
         <button onclick="checkout()">Checkout</button>
@@ -505,163 +512,7 @@
         </div>
       </div>
     </footer>
-    <!-- JavaScript -->
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        // Product data
-        const products = [
-          {
-            id: 1,
-            name: "MacBook Pro 16-inch",
-            category: "laptops",
-            price: 2499.99,
-            image: "../public/images/products carousel/laptop.jpg",
-          },
-          {
-            id: 2,
-            name: "iPhone 15 Pro Max",
-            category: "phones",
-            price: 1299.99,
-            image: "../public/images/products carousel/iphone.jpg",
-            icon: "fa-solid fa-mobile-alt",
-          },
-          {
-            id: 3,
-            name: "Sony WH-1000XM4",
-            category: "headphones",
-            price: 349.99,
-            image: "../public/images/products carousel/headphone.jpg",
-            icon: "fa-solid fa-headphones",
-          },
-          {
-            id: 4,
-            name: "Apple Watch Series 9",
-            category: "watches",
-            price: 499.99,
-            image:
-              "https://images.unsplash.com/photo-1579586337278-3befd40fd17a?w=500&q=80",
-            icon: "fa-solid fa-clock",
-          },
-          {
-            id: 5,
-            name: "Sony A7 IV",
-            category: "cameras",
-            price: 2499.99,
-            image: "../public/images/products carousel/camra.jpg",
-            icon: "fa-solid fa-camera",
-          },
-        ];
-
-        // Category data
-        const categories = [
-          { id: "all", name: "All Products", count: products.length },
-          {
-            id: "phones",
-            name: "Phones",
-            count: products.filter((p) => p.category === "phones").length,
-          },
-          {
-            id: "laptops",
-            name: "Laptops",
-            count: products.filter((p) => p.category === "laptops").length,
-          },
-          {
-            id: "headphones",
-            name: "Headphones",
-            count: products.filter((p) => p.category === "headphones").length,
-          },
-          {
-            id: "watches",
-            name: "Watches",
-            count: products.filter((p) => p.category === "watches").length,
-          },
-          {
-            id: "cameras",
-            name: "Cameras",
-            count: products.filter((p) => p.category === "cameras").length,
-          },
-        ];
-
-        // State to track selected category
-        let selectedCategory = "all";
-
-        // DOM elements
-        const categoryList = document.getElementById("category-list");
-        const productGrid = document.getElementById("product-grid");
-
-        // Generate category buttons
-        categories.forEach((category) => {
-          const button = document.createElement("button");
-          button.type = "button";
-          button.className = "list-group-item list-group-item-action";
-          button.innerHTML = `${category.name} <span class="float-end">${category.count}</span>`;
-          button.dataset.category = category.id;
-          button.addEventListener("click", () => {
-            selectedCategory = category.id;
-            renderProducts();
-            updateActiveButton();
-          });
-          categoryList.appendChild(button);
-        });
-
-        // Function to render products based on selected category
-        function renderProducts() {
-          productGrid.innerHTML = "";
-          const filteredProducts =
-            selectedCategory === "all"
-              ? products
-              : products.filter(
-                  (product) => product.category === selectedCategory
-                );
-
-          filteredProducts.forEach((product) => {
-            const productCard = document.createElement("div");
-            productCard.className = "col";
-            productCard.innerHTML = `
-                        <div class="card h-100">
-                            <img src="${
-                              product.image
-                            }" class="card-img-top" alt="${
-              product.name
-            }" style="height: 192px; object-fit: cover;">
-                            <div class="card-body">
-                                <div class="d-flex align-items-center mb-2">
-                                    <i class="${product.icon} me-2"></i>
-                                    <h5 class="card-title mb-0">${
-                                      product.name
-                                    }</h5>
-                                </div>
-                                <p class="text-orange fw-bold fs-4">$${product.price.toLocaleString()}</p>
-                                <button onclick="addToCart({
-                                  id: '${product.id}',
-                                  name: '${product.name}',
-                                  price: ${product.price},
-                                  image: '${product.image}'
-                                })" class="btn orange-btn w-100 mt-3">Add to Cart</button>
-                            </div>
-                        </div>
-                    `;
-            productGrid.appendChild(productCard);
-          });
-        }
-
-        // Function to highlight the active category button
-        function updateActiveButton() {
-          const buttons = categoryList.querySelectorAll(".list-group-item");
-          buttons.forEach((button) => {
-            if (button.dataset.category === selectedCategory) {
-              button.classList.add("active");
-            } else {
-              button.classList.remove("active");
-            }
-          });
-        }
-
-        // Initial render
-        renderProducts();
-        updateActiveButton();
-      });
-    </script>
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../public/js/cart.js"></script>
     <script src="../public/js/footer.js"></script>
