--- a/index.html
+++ b/index.html
@@ -276,16 +276,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="E-project/html/products.html">Products</a>
+                <a class="nav-link" href="/E-project/html/products.html">Products</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#articles">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="E-project/compare.html">Compare</a>
+                <a class="nav-link" href="/E-project/compare.html">Compare</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="E-project/about.html">About</a>
+                <a class="nav-link" href="/E-project/about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#brands">Brands</a>
@@ -294,7 +294,7 @@
                 <a class="nav-link" href="#categories">Categories</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="E-project/contact.html">Contact</a>
+                <a class="nav-link" href="/E-project/contact.html">Contact</a>
               </li>
             </ul>
           </div>
