--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
 
     <link rel="stylesheet" href="public/css/navbar.css" />
-    <link rel="stylesheet" href="/public/css/footer.css" />
+    <link rel="stylesheet" href="public/css/footer.css" />
     <link rel="stylesheet" href="public/css/style.css" />
     <link rel="stylesheet" href="public/css/2.css" />
     <script
